--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "firebase": "^10.14.0",
     "next": "14.2.13",
+    "qr-code-styling": "^1.6.0-rc.1",
+    "qrcode": "^1.5.4",
     "qrcode.react": "^4.0.1",
     "react": "^18",
     "react-dom": "^18",
