--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^10.14.0",
     "next": "14.2.13",
     "openai": "^4.67.1",
+    "punycode": "^2.3.1",
     "qr-code-styling": "^1.6.0-rc.1",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.0.1",
