--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.3.1",
     "firebase": "^10.14.0",
     "next": "14.2.13",
     "openai": "^4.67.1",
